--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     "NEXT_PUBLIC_GRAPHQL_API_ENDPOINT": "",
     "NEXT_PUBLIC_SITE_URL": "",
     "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "",
-    "NEXTAUTH_URL": "",
+    "NEXTAUTH_URL": "barectory.vercel.app",
     "SECRET": "",
     "GOOGLE_CLIENT_ID": "",
     "GOOGLE_CLIENT_SECRET": "",
@@ -18,7 +18,7 @@
       "NEXT_PUBLIC_GRAPHQL_API_ENDPOINT": "",
       "NEXT_PUBLIC_SITE_URL": "",
       "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "",
-      "NEXTAUTH_URL": "",
+      "NEXTAUTH_URL": "barectory.vercel.app",
       "SECRET": "",
       "GOOGLE_CLIENT_ID": "",
       "GOOGLE_CLIENT_SECRET": "",
