--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PickBazar E-Commerce",
-  "short_name": "PickBazar",
+  "name": "Barectory",
+  "short_name": "Barectory",
   "theme_color": "#ffffff",
   "background_color": "#004740",
   "display": "fullscreen",
@@ -9,13 +9,13 @@
   "start_url": "/",
   "icons": [
     {
-      "src": "icons/manifest-icon-192.png",
+      "src": "icons/barectory_manifest_logo_192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "icons/manifest-icon-512.png",
+      "src": "icons/barectory_manifest_logo_512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
