--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "little-state-machine": "^4.2.1",
     "lodash": "^4.17.21",
     "next": "12.0.10",
+    "next-absolute-url": "^1.2.2",
     "next-auth": "^4.2.1",
     "next-i18next": "^10.2.0",
     "next-pwa": "^5.4.4",
