--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.0",
     "react-query": "^3.34.15",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scroll": "^1.8.4",
     "react-select": "^5.2.2",
     "react-sticky-box": "^0.9.3",
