--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.3",
     "react-hook-form": "^7.27.0",
+    "react-image-magnify": "^2.7.4",
+    "react-img-zoom": "^0.1.0",
+    "react-medium-image-zoom": "^4.3.5",
     "react-otp-input": "^2.4.0",
     "react-phone-input-2": "^2.15.0",
     "react-query": "^3.34.15",
