--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "env": {
     "FRAMEWORK_PROVIDER": "rest",
-    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://barectory-api.herokuapp.com/api",
+    "NEXT_PUBLIC_REST_API_ENDPOINT": "",
     "NEXT_PUBLIC_GRAPHQL_API_ENDPOINT": "",
     "NEXT_PUBLIC_SITE_URL": "",
     "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "",
@@ -9,12 +9,13 @@
     "SECRET": "",
     "GOOGLE_CLIENT_ID": "",
     "GOOGLE_CLIENT_SECRET": "",
-    "NEXT_PUBLIC_ADMIN_URL": ""
+    "NEXT_PUBLIC_ADMIN_URL": "",
+    "NEXT_PUBLIC_GOOGLE_ANALYTICS": "G-QT8H01JMZV"
   },
   "build": {
     "env": {
       "FRAMEWORK_PROVIDER": "rest",
-      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://barectory-api.herokuapp.com/api",
+      "NEXT_PUBLIC_REST_API_ENDPOINT": "",
       "NEXT_PUBLIC_GRAPHQL_API_ENDPOINT": "",
       "NEXT_PUBLIC_SITE_URL": "",
       "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "",
@@ -22,7 +23,8 @@
       "SECRET": "",
       "GOOGLE_CLIENT_ID": "",
       "GOOGLE_CLIENT_SECRET": "",
-      "NEXT_PUBLIC_ADMIN_URL": ""
+      "NEXT_PUBLIC_ADMIN_URL": "",
+      "NEXT_PUBLIC_GOOGLE_ANALYTICS": "G-QT8H01JMZV"
     }
   }
 }
