Barectory Front-end Update

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reach/portal": "^0.16.2",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.22.0",
+    "@tawk.to/tawk-messenger-react": "^1.0.0",
     "apollo-upload-client": "^17.0.0",
     "axios": "^0.25.0",
     "body-scroll-lock": "^4.0.0-beta.0",
@@ -56,6 +57,7 @@
     "react-img-zoom": "^0.1.0",
     "react-medium-image-zoom": "^4.3.5",
     "react-otp-input": "^2.4.0",
+    "react-paystack": "^3.0.5",
     "react-phone-input-2": "^2.15.0",
     "react-query": "^3.34.15",
     "react-responsive": "^9.0.0-beta.6",
