--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "deepmerge": "^4.2.2",
+    "firebase": "^9.9.1",
     "framer-motion": "6.2.3",
     "jotai": "^1.6.0",
     "js-cookie": "^3.0.1",
@@ -52,6 +53,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.0.3",
+    "react-google-autocomplete": "^2.7.0",
     "react-hook-form": "^7.27.0",
     "react-image-magnify": "^2.7.4",
     "react-img-zoom": "^0.1.0",
