--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
 FRAMEWORK_PROVIDER="rest"
-NEXT_PUBLIC_REST_API_ENDPOINT="http://localhost:5000/api"
+NEXT_PUBLIC_REST_API_ENDPOINT="https://web-production-c072.up.railway.app/api"
 NEXT_PUBLIC_GRAPHQL_API_ENDPOINT="http://localhost:4000/graphql"
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 NEXT_PUBLIC_ADMIN_URL=
