--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "env": {
     "FRAMEWORK_PROVIDER": "rest",
-    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://web-production-c072.up.railway.app/api",
+    "NEXT_PUBLIC_REST_API_ENDPOINT": "https://baractory-api.onrender.com/api",
     "NEXT_PUBLIC_GRAPHQL_API_ENDPOINT": "",
     "NEXT_PUBLIC_SITE_URL": "",
     "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "",
-    "NEXTAUTH_URL": "barectory.vercel.app",
+    "NEXTAUTH_URL": "baractory-api.onrender.com",
     "SECRET": "",
     "GOOGLE_CLIENT_ID": "",
     "GOOGLE_CLIENT_SECRET": "",
@@ -15,11 +15,11 @@
   "build": {
     "env": {
       "FRAMEWORK_PROVIDER": "rest",
-      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://web-production-c072.up.railway.app/api",
+      "NEXT_PUBLIC_REST_API_ENDPOINT": "https://baractory-api.onrender.com/api",
       "NEXT_PUBLIC_GRAPHQL_API_ENDPOINT": "",
       "NEXT_PUBLIC_SITE_URL": "",
       "NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY": "",
-      "NEXTAUTH_URL": "barectory.vercel.app",
+      "NEXTAUTH_URL": "baractory-api.onrender.com",
       "SECRET": "",
       "GOOGLE_CLIENT_ID": "",
       "GOOGLE_CLIENT_SECRET": "",
